openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"argocd.argoproj.io/sync-options":"Validate=false"},"name":"react-cn","namespace":"react-cn"},"spec":{"tls":{"termination":"edge"},"to":{"kind":"Service","name":"react-cn","weight":100},"wildcardPolicy":"None"}}
    openshift.io/host.generated: "true"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:argocd.argoproj.io/sync-options: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:tls:
          .: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: kubectl-client-side-apply
    operation: Update
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2021-03-16T14:24:09Z"
  name: react-cn
  namespace: react-cn
  resourceVersion: "6956482"
  selfLink: /apis/route.openshift.io/v1/namespaces/react-cn/routes/react-cn
spec:
  host: react-cn-react-cn.cn-gm-bootcamp-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-east.containers.appdomain.cloud
  tls:
    termination: edge
  to:
    kind: Service
    name: react-cn
    weight: 100
  wildcardPolicy: None
