openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"react-cn","app.kubernetes.io/instance":"react-cn","app.kubernetes.io/name":"react-cn","helm.sh/chart":"react-cn-1.0.0-rcaa86053"},"name":"react-cn","namespace":"react-cn"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":3000}],"selector":{"app.kubernetes.io/instance":"react-cn","app.kubernetes.io/name":"react-cn"},"type":"ClusterIP"}}
  labels:
    app: react-cn
    app.kubernetes.io/instance: react-cn
    app.kubernetes.io/name: react-cn
    helm.sh/chart: react-cn-1.0.0-rcaa86053
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
          f:helm.sh/chart: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-03-16T14:24:09Z"
  name: react-cn
  namespace: react-cn
  resourceVersion: "6956461"
spec:
  clusterIP: 172.21.36.250
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: react-cn
    app.kubernetes.io/name: react-cn
  sessionAffinity: None
  type: ClusterIP
